# siril

src/: main.c  meson.build
src/Qt_client/: .gitignore  CoordinateUtils.cpp  CoordinateUtils.h  Makefile  SirilClient.cpp  SirilClient.h  StellinaProcessor.cpp  StellinaProcessor.h  StellinaProcessor.pro  StellinaProcessor_Core.cpp  StellinaProcessor_Misc.cpp  StellinaProcessor_Processing.cpp  StellinaProcessor_Slots.cpp  StellinaProcessor_UI.cpp  StellinaProcessor_Utils.cpp  StellinaProcessor_WCS_Integration.cpp  WcsAstrometricStacker.cpp  WcsAstrometricStacker.h  build_and_test_script.sh  main.cpp  readme.md  siril_log_analyzer.py  stellina_coordinate_analysis.py  tilt.py
src/core/: command_list.h  siril.h
src/gui/: histogram.c
src/io/: siril_pythonmodule.c  siril_pythonmodule.h
src/stellina/: meson.build  siril_stellina_extension.cpp  stellina_commands.cpp  stellina_commands.h  stellina_coordinates.cpp  stellina_integration.cpp  stellina_processor.cpp  stellina_processor.h  stellina_quality.cpp
